// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileList can build a track adding tiles at the first position with a particular type 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      CurvedTileModel {
        "direction": "left",
        "id": "id-18",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-17",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track adding tiles at the first position with the default specifications 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-16",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-15",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track adding tiles at the last position with a particular type 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      CurvedTileModel {
        "direction": "left",
        "id": "id-14",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track adding tiles at the last position with the default specifications 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-13",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track inserting tiles after a position in the middle 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-58",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-59",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-61",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-60",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track inserting tiles after an inexistent position 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-51",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track inserting tiles after the first position 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-52",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-54",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-53",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track inserting tiles after the last position 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-55",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-56",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-57",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track inserting tiles after with a particular type 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-62",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      CurvedTileModel {
        "direction": "left",
        "id": "id-63",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track inserting tiles before a position in the middle 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-45",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-48",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-46",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-47",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track inserting tiles before an inexistent position 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-38",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track inserting tiles before the first position 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-41",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-39",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-40",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track inserting tiles before the last position 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-42",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-44",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-43",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track inserting tiles before with a particular type 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      CurvedTileModel {
        "direction": "left",
        "id": "id-50",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-49",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track removing tiles at inexistent position 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-28",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track removing tiles from the end 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-25",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-26",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track removing tiles from the middle 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-22",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-24",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track removing tiles from the start 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-20",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-21",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track replacing tiles at inexistent position 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-37",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track replacing tiles with a tile having a particular type 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-33",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-34",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      CurvedTileModel {
        "direction": "left",
        "id": "id-36",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track replacing tiles with a tile having default specifications 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-29",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-32",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-31",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can build a track with the given size 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can clear the list 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can export to an object 1`] = `
Array [
  Object {
    "direction": "right",
    "ratio": 1,
    "type": "curved-tile",
  },
]
`;

exports[`TileList can import from an object 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-65",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can import from an object 2`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      CurvedTileModel {
        "direction": "left",
        "id": "id-66",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-67",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      CurvedTileModel {
        "direction": "right",
        "id": "id-68",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can notify changes 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can notify changes 2`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      CurvedTileModel {
        "direction": "right",
        "id": "id-70",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can notify changes 3`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      CurvedTileModel {
        "direction": "right",
        "id": "id-71",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      CurvedTileModel {
        "direction": "right",
        "id": "id-70",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can notify changes 4`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      CurvedTileModel {
        "direction": "right",
        "id": "id-71",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can notify changes 5`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-72",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can notify changes 6`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-73",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-72",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can notify changes 7`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-73",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-72",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-74",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can notify changes 8`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can notify changes 9`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-75",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-76",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-77",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can notify changes 10`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 2,
    "barrierWidth": 1,
    "laneWidth": 10,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-75",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-76",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-77",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can notify changes 11`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 2,
    "barrierWidth": 1,
    "laneWidth": 10,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-75",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-76",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
          "maxRatio": 4,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-77",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList can produce an iterator 1`] = `
Array [
  StraightTileModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
]
`;

exports[`TileList can set the specifications of the tiles 1`] = `
TileList {
  "specs": TileSpecifications {
    "barrierChunks": 2,
    "barrierWidth": 1,
    "laneWidth": 10,
    "maxRatio": 4,
  },
  "subscribe": [Function],
  "tiles": List {
    "delegate": [Function],
    "emit": [Function],
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
          "maxRatio": 4,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
  },
}
`;

exports[`TileList implements the iteration protocol 1`] = `
Array [
  StraightTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
]
`;
